--- a/index.html
+++ b/index.html
@@ -36,33 +36,37 @@
         <div class="intro">
             <div class="container">
                 <div class="intro_box">
-                    <div class="card_box">
-                        <p class="sales">50%</p>
-                        <img class="intro_img" src="./images/Pierre Lannier.png" alt="">
-                        <div class="card_minibox">
-                            <p class="text">Мужские часы </p>
-                            <h3 class="name">Pierre Lannier</h3>
-                            <p class="price">1 280 000 UZS</p>
+                        <div class="info_left_box">
+                            <div class="left_box">
+                                <p class="sales">50%</p>
+                            <img src="./images/Pierre Lannier.png" alt="" class="intro_leftbox_img">
+                            <div class="left_minibox">
+                                <p class="text">Мужские часы </p>
+                                <h3 class="name">Pierre Lannier</h3>
+                                <p class="price">1 280 000 UZS</p>
+                            </div>
+                            </div>
+                            <div class="left_box second_box">
+                                <p class="sales">20%</p>
+                            <img src="./images/Swiss Military Chrono.png" alt="" class="intro_leftbox_img">
+                            <div class="left_minibox">
+                                <p class="text">Мужские часы </p>
+                                <h3 class="name">Swiss Military Chrono</h3>
+                                <p class="price">1 500 000 UZS</p>
+                            </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_box">
-                        <p class="sales">50%</p>
-                        <img class="intro_img intro_second_img" src="./images/Diadema grand.png" alt="">
-                        <div class="card_minibox">
-                            <p class="text">Черная мужская серьга</p>
-                            <h3 class="name">Diadema grand</h3>
-                            <p class="price">95 000 UZS</p>
+                        <div class="info_right_box">
+                            <div class="right_box">
+                                <p class="sales">50%</p>
+                            <img src="./images/Diadema grand.png" alt="" class="intro_leftbox_img">
+                            <div class="right_minibox">
+                                <p class="text">Черная мужская серьга</p>
+                                <h3 class="name">Diadema grand</h3>
+                                <p class="price">95 000 UZS</p>
+                            </div>
+                            </div>
                         </div>
-                    </div>
-                    <div class="card_box">
-                        <p class="sales">20%</p>
-                        <img class="intro_img" src="./images/Swiss Military Chrono.png" alt="">
-                        <div class="card_minibox">
-                            <p class="text">Мужские часы </p>
-                            <h3 class="name">Swiss Military Chrono</h3>
-                            <p class="price">1 500 000 UZS</p>
-                        </div>
-                    </div>
                 </div>
             </div>
         </div>
